tests/NormalTests/paczka1/fuzzy1/88500561.err
Error in line 13: S264 S988 8,7
Error in line 18: e8hbE A351 56,0
Error in line 22: hagREg S113 89,8
Error in line 26: iTs42pU S264 65,2
Error in line 37: e8hbE S113 70,9
